--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
       cursor: pointer;
       border-radius: 8px;
       border: none;
-      background-color: #4CAF50;
+      background-color: beige;
       color: white;
     }
     button:hover {
-      background-color: #45a049;
+      background-color: grey;
     }
     #message {
       margin-top: 20px;
